--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^1.0.4
+  file_picker: ^10.1.2
+  pdf: ^3.11.3
+  printing: ^5.14.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
