--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   printing: ^5.14.2
   http: ^1.3.0
   shared_preferences: ^2.5.3
+  firebase_core: ^2.24.2
+  flutter_dotenv: ^5.1.0
 
 
 
@@ -69,7 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/fonts/DejaVuSans.ttf
-  #   - images/a_dot_ham.jpeg
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
